charts/frontend/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - sudoku-dev.073ed16829504d398ee5.eastus.aksapp.io
    secretName: tls-secret
  rules:
  - host: sudoku-dev.073ed16829504d398ee5.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
